--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Micro Service for PkmnGo Gym Information",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "test": "node index.test | tap-spec"
   },
   "repository": {
     "type": "git",
