--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "helmet": "^3.15.0",
     "mongodb": "^3.1.9",
     "morgan": "^1.9.1",
+    "supertest": "^3.3.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.1"
   }
